# ODEROM

./: Cargo.toml  DESIGN-M2.md  DESIGN-M3.md  DESIGN-M4.md  DESIGN-M5.md  DESIGN-RATIONAL-FORM.md  DESIGN-UI.md  DESIGN.md  README.md  prelude.od
oderom-canon/: Cargo.toml
oderom-canon/benches/: canon_bench.rs
oderom-canon/src/: coset.rs  error.rs  lib.rs  word.rs
oderom-canon/tests/: acceptance.rs  prop_canon.proptest-regressions  prop_canon.rs
oderom-cli/: Cargo.toml
oderom-cli/src/: commands.rs  error.rs  expr_parser.rs  index_resolve.rs  main.rs  model.rs  parser.rs
oderom-cli/tests/: end_to_end.rs
oderom-cli/tests/fixtures/: connection_only.od  reissner_nordstrom.od  schwarzschild_ascii.od  schwarzschild_latex.od
oderom-components/: Cargo.toml
oderom-components/src/: atlas.rs  chart.rs  curvature.rs  error.rs  grid.rs  holonomy.rs  lib.rs  render.rs  tensor.rs
oderom-components/tests/: diagnostic_rn.rs  holonomy.rs  schwarzschild.rs  sphere.rs
oderom-core/: Cargo.toml
oderom-core/src/: error.rs  head.rs  lib.rs  monomial.rs  perm.rs  registry.rs  render.rs  scalar.rs  symmetry.rs
oderom-egraph/: Cargo.toml
oderom-egraph/src/: bianchi.rs  egraph.rs  extract.rs  lib.rs  union_find.rs
oderom-egraph/tests/: bianchi.rs
oderom-expr/: Cargo.toml
oderom-expr/src/: diff.rs  lib.rs  normalize.rs  rationalize.rs  render.rs  substitute.rs
oderom-jit/: Cargo.toml
oderom-jit/src/: compile.rs  error.rs  lib.rs  program.rs
oderom-types/: Cargo.toml
oderom-types/src/: domain.rs  error.rs  judgment.rs  lib.rs
