[package]
name = "oderom-canon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ODEROM Marco 1 -- Butler-Portugal canonicalization of contraction graphs"

[dependencies]
oderom-core = { path = "../oderom-core" }
thiserror = "1"
smallvec = "1"
rustc-hash = "1"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "canon_bench"
harness = false

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"
