[package]
name = "oderom-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ODEROM CLI -- canon (Marco 1), christoffel/riemann/ricci/scalar/kretschmann (UI Camada A.2)"

[[bin]]
name = "oderom"
path = "src/main.rs"

[dependencies]
oderom-core = { path = "../oderom-core" }
oderom-canon = { path = "../oderom-canon" }
oderom-expr = { path = "../oderom-expr" }
oderom-components = { path = "../oderom-components" }
thiserror = "1"
smallvec = "1"

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"
