[package]
name = "oderom-components"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ODEROM Marco 2 -- charts, component tensors, Christoffel/Riemann/Ricci"

[dependencies]
oderom-core = { path = "../oderom-core" }
oderom-types = { path = "../oderom-types" }
oderom-expr = { path = "../oderom-expr" }
thiserror = "1"
smallvec = "1"
rustc-hash = "1"

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"
