[package]
name = "oderom-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ODEROM Marco 1 -- term representation: contraction graphs, symmetry groups, tensor heads"

[dependencies]
thiserror = "1"
smallvec = "1"
rustc-hash = "1"

[dev-dependencies]
proptest = "1"

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"
