[package]
name = "oderom-egraph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ODEROM Marco 4 -- e-graph, equality saturation, and multi-term identities (Bianchi)"

[dependencies]
oderom-core = { path = "../oderom-core" }
oderom-canon = { path = "../oderom-canon" }
smallvec = "1"
rustc-hash = "1"

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"
