[package]
name = "oderom-expr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ODEROM Marco 2 -- symbolic scalar expressions: differentiation and simplification"

[dependencies]
oderom-core = { path = "../oderom-core" }
thiserror = "1"
smallvec = "1"

[dev-dependencies]
proptest = "1"

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"
