[package]
name = "oderom-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ODEROM Marco 1 -- geometric type judgments over oderom-core terms"

[dependencies]
oderom-core = { path = "../oderom-core" }
thiserror = "1"

[dev-dependencies]
proptest = "1"
smallvec = "1"

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"
